@@ -6,7 +6,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class AlbumTypeYearListArranger implements ListArranger<Album> {
@@ -15,7 +14,7 @@ public class AlbumTypeYearListArranger implements ListArranger<Album> {
     public List<Album> arrange(List<Album> albums) {
         return albums.stream()
                 .sorted(Comparator.<Album>comparingInt(album -> album.getType().getOrder()).thenComparingInt(Album::getYear))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
